--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ListaContactosActivity"
+            android:exported="false" />
+        <activity android:name=".RegistrarActivity" />
+        <activity android:name=".recuperarPassActivity" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
